--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">SpaceShooterSample</string>
     <string name="start_game">Start Game!</string>
+    <string name="highScoreText">"Longest distance: %s km"</string>
 </resources>
