--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <integer name="STAGE_WIDTH">1080</integer>
+    <integer name="STAGE_HEIGHT">720</integer>
+    <integer name="STAR_COUNT">40</integer>
+    <integer name="ENEMY_COUNT">10</integer>
+    <integer name="PLAYER_HEIGHT">75</integer>
+    <integer name="PLAYER_STARTING_HEALTH">3</integer>
 </resources>
