Improvements in the star entity: realistic star speed, colors and shapes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="48dp"
-        android:backgroundTint="#457297"
+        android:backgroundTint="#3B8CAC"
         android:text="@string/start_game"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
