--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SpaceShooterSample</string>
-    <string name="start_game">Start Game!</string>
+    <string name="start_game">Start</string>
     <string name="highScore">Longest distance: %s km</string>
     <string name="health_counter">Health %s</string>
     <string name="distance_counter">Distance: %s</string>
